--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>bonsai.bzh</title>
+    <title>Gwezennig</title>
     <style>
     body {
       background: #6c3;
@@ -18,6 +18,6 @@
     </style>
   </head>
   <body>
-    <h1>bonsai.bzh</h1>
+    <h1>Gwezennig</h1>
   </body>
 </html>
