--- a/index.html
+++ b/index.html
@@ -5,19 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Gwezennig Bonsai Nursery</title>
     <style>
+    @import url("https://fonts.googleapis.com/css2?family=Ribeye&display=swap");
     body {
       background: #6c3;
-      color: rgba(255, 255, 255, 0.8);
       display: grid;
-      font-family: monospace;
-      font-size: 32px;
       height: 100vh;
       margin: 0;
       place-items: center;
     }
+    h1, h2 {
+      margin: 0;
+      padding: 0;
+      font-weight: normal;
+      font-family: "Ribeye", cursive;
+      text-shadow: 1px -1px 2px rgba(0, 0, 0, 0.3);
+      color: #efd;
+      text-align: center;
+    }
+    h1 {
+      font-size: 64px;
+    }
+    h2 {
+      font-size: 48px;
+    }
     </style>
   </head>
   <body>
-    <h1>Gwezennig Bonsai Nursery</h1>
+    <div>
+      <h1>Gwezennig</h1>
+      <h2>Bonsai Nursery</h2>
+    </div>
   </body>
 </html>
