--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       margin: 0;
       place-items: center;
     }
+    .container {
+      margin: 10px;
+    }
+    img {
+      max-width: 800px;
+      width: 100%;
+      height: auto;
+      display: block;
+    }
     h1, h2 {
       margin: 0;
       padding: 0;
@@ -31,7 +40,8 @@
     </style>
   </head>
   <body>
-    <div>
+    <div class="container">
+      <img src="logo.png" width="800" height="425">
       <h1>Gwezennig</h1>
       <h2>Bonsai Nursery</h2>
     </div>
