Update font size

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       text-align: center;
     }
     h1 {
-      font-size: 64px;
+      font-size: 8vw;
     }
     h2 {
-      font-size: 48px;
+      font-size: 5vw;
     }
     </style>
   </head>
