--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       text-align: center;
     }
     h1 {
-      font-size: 8vw;
+      font-size: 10vh;
     }
     h2 {
-      font-size: 5vw;
+      font-size: 6vh;
     }
     </style>
   </head>
