Add links to social medias

--- a/index.html
+++ b/index.html
@@ -1,49 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html class="TridactylThemeDark" lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Gwezennig Bonsai Nursery</title>
-    <style>
-    @import url("https://fonts.googleapis.com/css2?family=Ribeye&display=swap");
-    body {
-      background: #6c3;
-      display: grid;
-      height: 100vh;
-      margin: 0;
-      place-items: center;
-    }
-    .container {
-      margin: 10px;
-    }
-    img {
-      max-width: 800px;
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    h1, h2 {
-      margin: 0;
-      padding: 0;
-      font-weight: normal;
-      font-family: "Ribeye", cursive;
-      text-shadow: 1px -1px 2px rgba(0, 0, 0, 0.3);
-      color: #efd;
-      text-align: center;
-    }
-    h1 {
-      font-size: 10vmin;
-    }
-    h2 {
-      font-size: 6vmin;
-    }
-    </style>
+    <link href="index.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+    <div class="center">
       <img src="logo.png" width="800" height="425">
       <h1>Gwezennig</h1>
       <h2>Bonsai Nursery</h2>
+    </div>
+    <div class="icons">
+      <a href="https://facebook.com/gwezennig">
+        <object type="image/svg+xml" data="icon-facebook.svg">facebook</object>
+      </a>
+      <a href="https://instagram.com/gwezennig">
+        <object type="image/svg+xml" data="icon-instagram.svg">instagram</object>
+      </a>
+      <a href="https://twitter.com/gwezennig">
+        <object type="image/svg+xml" data="icon-twitter.svg">twitter</object>
+      </a>
     </div>
   </body>
 </html>
