Add more content

--- a/index.html
+++ b/index.html
@@ -6,22 +6,83 @@
     <title>Gwezennig Bonsai Nursery</title>
     <link href="index.css" rel="stylesheet">
   </head>
-  <body>
-    <div class="center">
-      <img src="logo.png" width="800" height="425">
-      <h1>Gwezennig</h1>
-      <h2>Bonsai Nursery</h2>
-    </div>
-    <div class="icons">
-      <a href="https://facebook.com/gwezennig">
-        <object type="image/svg+xml" data="icon-facebook.svg">facebook</object>
-      </a>
-      <a href="https://instagram.com/gwezennig">
-        <object type="image/svg+xml" data="icon-instagram.svg">instagram</object>
-      </a>
-      <a href="https://twitter.com/gwezennig">
-        <object type="image/svg+xml" data="icon-twitter.svg">twitter</object>
-      </a>
-    </div>
+  <body class="m-0">
+    <section id="landing" class="grid bg-primary">
+      <div class="grid-center container text-center">
+        <img src="logo.png" width="800" height="425">
+        <h1>Gwezennig</h1>
+        <h2>Bonsai Nursery</h2>
+      </div>
+      <div class="nav social">
+        <a href="https://facebook.com/gwezennig">
+          <object type="image/svg+xml" data="icon-facebook.svg">facebook</object>
+        </a>
+        <a href="https://instagram.com/gwezennig">
+          <object type="image/svg+xml" data="icon-instagram.svg">instagram</object>
+        </a>
+        <a href="https://twitter.com/gwezennig">
+          <object type="image/svg+xml" data="icon-twitter.svg">twitter</object>
+        </a>
+      </div>
+    </section>
+    <section id="about" class="grid">
+      <div class="grid-center container">
+        <p class="m-0">Gwezennig is a Breton word that means "small tree" in English, which is fitting for a small scale bonsai nursery.</p>
+        <p>Our goal is to select and grow young trees that have the best genetics for bonsai from a selection of Japanese and European species.</p>
+      </div>
+      <div class="grid-center container">
+        <h2 class="text-primary text-center">Japanese Species</h2>
+        <ul>
+          <li>
+            <a href="">Acer buergerianum</a>, Trident maple, Toukaede (トウカエデ)
+          </li>
+          <li>
+            <a href="">Acer palmatum</a>, Japanese maple, Momiji (イロハモミジ)
+            <ul>
+              <li><a href="">Deshojo</a> (出猩猩)</li>
+              <li><a href="">Katsura</a> (桂)</li>
+              <li><a href="">Kiyohime</a> (清姬)</li>
+              <!--<li><a href="">Kotohime</a> (琴姬)</li>-->
+              <!--<li><a href="">Shishigashira</a> (狮子头)</li>-->
+            </ul>
+          </li>
+          <!--
+          <li>
+            <a href="">Carpinus japonica</a>, Japanese hornbeam, Kumashide (クマシデ)
+          </li>
+          -->
+          <li>
+            <a href="">Chaenomeles japonica</a>, Japanese quince, Kusaboke (クサボケ)
+            <ul>
+              <li><a href="">Chojubai</a> (長寿梅)</li>
+            </ul>
+          </li>
+          <li>
+            <a href="">Juniperus chinensis</a>, Chinese juniper, Shimpaku (真柏)
+            <ul>
+              <li><a href="">Itoigawa</a> (糸魚川)</li>
+              <li><a href="">Kishu</a> (纪州)</li>
+            </ul>
+          </li>
+          <li>
+            <a href="">Pinus thunbergii</a>, Japanese black pine, Kuromatsu (黒松)
+          </li>
+          <li>
+            <a href="">Pseudocydonia sinensis</a>, Chinese quince, Karin (花梨)
+          </li>
+          <li>
+            <a href="">Zelkova serrata</a>, Japanese elm, Keyaki (欅)
+          </li>
+        </ul>
+      </div>
+      <div class="grid-center container">
+        <h2 class="text-primary text-center">European Species</h2>
+        <ul>
+          <li><a href="">Carpinus betulus</a>, Hornbeam</li>
+          <li><a href="">Crataegus monogyna</a>, Hawthorn</li>
+          <li><a href="">Prunus spinosa</a>, Blackthorn</li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
