Add japanese font

--- a/index.html
+++ b/index.html
@@ -34,44 +34,44 @@
         <h2 class="text-primary text-center">Japanese Species</h2>
         <ul>
           <li>
-            <a href="">Acer buergerianum</a>, Trident maple, Toukaede (トウカエデ)
+            <a href="">Acer buergerianum</a>, Trident maple, Toukaede <span class="japanese">(トウカエデ)</span>
           </li>
           <li>
-            <a href="">Acer palmatum</a>, Japanese maple, Momiji (イロハモミジ)
+            <a href="">Acer palmatum</a>, Japanese maple, Momiji <span class="japanese">(イロハモミジ)</span>
             <ul>
-              <li><a href="">Deshojo</a> (出猩猩)</li>
-              <li><a href="">Katsura</a> (桂)</li>
-              <li><a href="">Kiyohime</a> (清姬)</li>
-              <!--<li><a href="">Kotohime</a> (琴姬)</li>-->
-              <!--<li><a href="">Shishigashira</a> (狮子头)</li>-->
+              <li><a href="">Deshojo</a> <span class="japanese">(出猩猩)</span></li>
+              <li><a href="">Katsura</a> <span class="japanese">(桂)</span></li>
+              <li><a href="">Kiyohime</a> <span class="japanese">(清姬)</span></li>
+              <!--<li><a href="">Kotohime</a> <span class="japanese">(琴姬)</span></li>-->
+              <!--<li><a href="">Shishigashira</a> <span class="japanese">(狮子头)</span></li>-->
             </ul>
           </li>
           <!--
           <li>
-            <a href="">Carpinus japonica</a>, Japanese hornbeam, Kumashide (クマシデ)
+            <a href="">Carpinus japonica</a>, Japanese hornbeam, Kumashide <span class="japanese">(クマシデ)</span>
           </li>
           -->
           <li>
-            <a href="">Chaenomeles japonica</a>, Japanese quince, Kusaboke (クサボケ)
+            <a href="">Chaenomeles japonica</a>, Japanese quince, Kusaboke <span class="japanese">(クサボケ)</span>
             <ul>
-              <li><a href="">Chojubai</a> (長寿梅)</li>
+              <li><a href="">Chojubai</a> <span class="japanese">(長寿梅)</span></li>
             </ul>
           </li>
           <li>
-            <a href="">Juniperus chinensis</a>, Chinese juniper, Shimpaku (真柏)
+            <a href="">Juniperus chinensis</a>, Chinese juniper, Shimpaku <span class="japanese">(真柏)</span>
             <ul>
-              <li><a href="">Itoigawa</a> (糸魚川)</li>
-              <li><a href="">Kishu</a> (纪州)</li>
+              <li><a href="">Itoigawa</a> <span class="japanese">(糸魚川)</span></li>
+              <li><a href="">Kishu</a> <span class="japanese">(纪州)</span></li>
             </ul>
           </li>
           <li>
-            <a href="">Pinus thunbergii</a>, Japanese black pine, Kuromatsu (黒松)
+            <a href="">Pinus thunbergii</a>, Japanese black pine, Kuromatsu <span class="japanese">(黒松)</span>
           </li>
           <li>
-            <a href="">Pseudocydonia sinensis</a>, Chinese quince, Karin (花梨)
+            <a href="">Pseudocydonia sinensis</a>, Chinese quince, Karin <span class="japanese">(花梨)</span>
           </li>
           <li>
-            <a href="">Zelkova serrata</a>, Japanese elm, Keyaki (欅)
+            <a href="">Zelkova serrata</a>, Japanese elm, Keyaki <span class="japanese">(欅)</span>
           </li>
         </ul>
       </div>
