Uncomment palmatum cultivars

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <li><a href="">Deshojo</a> <span class="japanese">(出猩猩)</span></li>
               <li><a href="">Katsura</a> <span class="japanese">(桂)</span></li>
               <li><a href="">Kiyohime</a> <span class="japanese">(清姬)</span></li>
-              <!--<li><a href="">Kotohime</a> <span class="japanese">(琴姬)</span></li>-->
-              <!--<li><a href="">Shishigashira</a> <span class="japanese">(狮子头)</span></li>-->
+              <li><a href="">Kotohime</a> <span class="japanese">(琴姬)</span></li>
+              <li><a href="">Shishigashira</a> <span class="japanese">(狮子头)</span></li>
             </ul>
           </li>
           <!--
