--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     </section>
     <section id="about" class="grid">
       <div class="grid-center container">
-        <p class="m-0">Gwezennig is a Breton word that means "small tree" in English, which is fitting for a small scale bonsai nursery.</p>
-        <p>Our goal is to select and grow young trees that have the best genetics for bonsai from a selection of Japanese and European species.</p>
+        <p class="m-0">Gwezennig is a Breton word that means "small tree" in English, which is fitting for a hobby bonsai nursery.</p>
+        <p>Our aim is to cultivate young trees that have the best genetics for bonsai from a selection of Japanese and European species adapted to the climate of Brittany.</p>
       </div>
       <div class="grid-center container">
         <h2 class="text-primary text-center">Japanese Species</h2>
         <ul>
           <li>
-            <a href="">Acer buergerianum</a>, Trident maple, Toukaede <span class="japanese">(トウカエデ)</span>
+            <a href="">Acer buergerianum</a>, Trident maple, Kaede <span class="japanese">(カエデ)</span>
           </li>
           <li>
-            <a href="">Acer palmatum</a>, Japanese maple, Momiji <span class="japanese">(イロハモミジ)</span>
+            <a href="">Acer palmatum</a>, Japanese maple, Momiji <span class="japanese">(モミジ)</span>
             <ul>
               <li><a href="">Deshojo</a> <span class="japanese">(出猩猩)</span></li>
               <li><a href="">Katsura</a> <span class="japanese">(桂)</span></li>
@@ -71,7 +71,7 @@
             <a href="">Pseudocydonia sinensis</a>, Chinese quince, Karin <span class="japanese">(花梨)</span>
           </li>
           <li>
-            <a href="">Zelkova serrata</a>, Japanese elm, Keyaki <span class="japanese">(欅)</span>
+            <a href="">Zelkova serrata</a>, Japanese zelkova, Keyaki <span class="japanese">(欅)</span>
           </li>
         </ul>
       </div>
